src/components/Connect.module.css
.ConnectOverlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: start;
    /* align-items: start; */
    z-index: 10;
    pointer-events: none;
}

.ConnectOverlay.withStats {
    height: 100%;
}

.Controls {
    display: flex;
    flex-direction: row;
    gap: 8px;
    padding: 10px;
    margin-right: 40px;
    pointer-events: initial;
}
.Stats {
    flex: 1;
    pointer-events: initial;
    background-color: rgba(255, 255, 255, 0.7);
    color: #333;
    /* border: 2px solid white; */
    margin: 10px;
    margin-right: 50px;
    margin-top: 0px;
    border-radius: 4px;
    box-shadow: 0 0 0 2px #0000001a;
    padding: 8px;
}

